--- a/Dog-GraphQL-API/src/main/resources/application.properties
+++ b/Dog-GraphQL-API/src/main/resources/application.properties
@@ -1,12 +1,16 @@
+
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.datasource.url=jdbc.h2.mem.dogtracker
+spring.datasource.url=jdbc:h2:mem:dogtracker
 
 graphql.servlet.enabled=true
-# this need to match graphiql.endpoint to enable interaction with the graphiql
-graphql.servlet.mapping=/graphql 
+
+graphql.servlet.mapping=/graphql
 graphql.servlet.corsEnabled=true
 
-graphiql.enabled=true
+# The order of these properties is important, If you swaped enabled and endpoint you'll get EOF exception
+# I don't know what causes this
 graphiql.endpoint=/graphql
+graphiql.enabled=true
 graphiql.mapping=graphiql
