--- a/DogMicroservice/src/main/resources/application.properties
+++ b/DogMicroservice/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.h2.console.path=/h2
 spring.h2.console.enabled=true
 
+spring.application.name=dog-service
+server.port=8762
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+instance.preferIpAddress=true
